--- a/falcosidekick/templates/secrets.yaml
+++ b/falcosidekick/templates/secrets.yaml
@@ -56,6 +56,7 @@ data:
 
   # AlertManager Output
   ALERTMANAGER_HOSTPORT: "{{ .Values.config.alertmanager.hostport | b64enc }}"
+  ALERTMANAGER_ENDPOINT: "{{ .Values.config.alertmanager.endpoint | b64enc }}"
   ALERTMANAGER_MINIMUMPRIORITY: "{{ .Values.config.alertmanager.minimumpriority | b64enc }}"
   ALERTMANAGER_MUTUALTLS: "{{ .Values.config.alertmanager.mutualtls | printf "%t" | b64enc }}"
   ALERTMANAGER_CHECKCERT: "{{ .Values.config.alertmanager.checkcert | printf "%t" | b64enc }}"
@@ -86,6 +87,8 @@ data:
   AWS_S3_BUCKET: "{{ .Values.config.aws.s3.bucket | b64enc }}"
   AWS_S3_PREFIX: "{{ .Values.config.aws.s3.prefix | b64enc }}"
   AWS_S3_MINIMUMPRIORITY: "{{ .Values.config.aws.s3.minimumpriority | b64enc }}"
+  AWS_KINESIS_STREAMNAME: "{{ .Values.config.aws.kinesis.streamname | b64enc }}"
+  AWS_KINESIS_MINIMUMPRIORITY: "{{ .Values.config.aws.kinesis.minimumpriority | b64enc }}"
 
   # SMTP Output
   SMTP_USER: "{{ .Values.config.smtp.user | b64enc }}"
@@ -140,6 +143,8 @@ data:
 
   # Loki Output
   LOKI_HOSTPORT: "{{ .Values.config.loki.hostport | b64enc }}"
+  LOKI_ENDPOINT: "{{ .Values.config.loki.endpoint | b64enc }}"
+  LOKI_TENANT: "{{ .Values.config.loki.tenant | b64enc }}"
   LOKI_MINIMUMPRIORITY: "{{ .Values.config.loki.minimumpriority | b64enc }}"
   LOKI_MUTUALTLS: "{{ .Values.config.loki.mutualtls | printf "%t" | b64enc }}"
   LOKI_CHECKCERT: "{{ .Values.config.loki.checkcert | printf "%t" | b64enc }}"
@@ -261,6 +266,27 @@ data:
   KAFKAREST_MINIMUMPRIORITY : "{{ .Values.config.kafkarest.minimumpriority | b64enc}}"
   KAFKAREST_MUTUALTLS : "{{ .Values.config.kafkarest.mutualtls | printf "%t" | b64enc}}"
   KAFKAREST_CHECKCERT : "{{ .Values.config.kafkarest.checkcert | printf "%t" | b64enc}}"
+
+  # Syslog
+  SYSLOG_HOST: "{{ .Values.config.syslog.host | b64enc}}"
+  SYSLOG_PORT: "{{ .Values.config.syslog.port | printf "%t" | b64enc}}"
+  SYSLOG_PROTOCOL: "{{ .Values.config.syslog.protocol | b64enc}}"
+  SYSLOG_MINIMUMPRIORITY : "{{ .Values.config.syslog.minimumpriority | b64enc}}"
+
+  # Zoho Cliq
+  CLIQ_WEBHOOKURL: "{{ .Values.config.cliq.webhookurl | b64enc}}"
+  CLIQ_ICON: "{{ .Values.config.cliq.icon | b64enc}}"
+  CLIQ_USEEMOJI: "{{ .Values.config.cliq.useemoji | printf "%t" | b64enc}}"
+  CLIQ_OUTPUTFORMAT: "{{ .Values.config.cliq.outputformat | b64enc}}"
+  CLIQ_MESSAGEFORMAT: "{{ .Values.config.cliq.messageformat | b64enc}}"
+  CLIQ_MINIMUMPRIORITY : "{{ .Values.config.cliq.minimumpriority | b64enc}}"
+
+  # Policy Reporter
+  POLICYREPORTER_ENABLED: "{{ .Values.config.policyreporter.enabled | printf "%t"| b64enc}}"
+  POLICYREPORTER_KUBECONFIG: "{{ .Values.config.policyreporter.kubeconfig | b64enc}}"
+  POLICYREPORTER_MAXEVENTS: "{{ .Values.config.policyreporter.maxevents | printf "%t" | b64enc}}"
+  POLICYREPORTER_PRUNEBYPRIORITY: "{{ .Values.config.policyreporter.prunebypriority | printf "%t" | b64enc}}"
+  POLICYREPORTER_MINIMUMPRIORITY : "{{ .Values.config.policyreporter.minimumpriority | b64enc}}"
 
   # WebUI Output
   {{- if .Values.webui.enabled -}}
